# mindzj

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
crates/mindzj-kernel/: Cargo.toml
crates/mindzj-kernel/bindings/: AiSkill.ts  FileMetadata.ts  GlobalWindowState.ts  GraphData.ts  HotkeyBinding.ts  LinkType.ts  OutlineHeading.ts  SearchQuery.ts  SearchResult.ts  VaultEntry.ts  VaultInfo.ts  WorkspaceState.ts
crates/mindzj-kernel/src/: error.rs  lib.rs  links.rs  plugins.rs  search.rs  types.rs  vault.rs
docs/: README_DE.md  README_FR.md  README_JA.md
docs/adr/: 0001-extract-shared-kernel-crate.md
scripts/: bump-version.mjs
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AiProviderConfig.ts  AiProviderType.ts  AppSettings.ts  FileContent.ts  FileEvent.ts  GraphEdge.ts  GraphNode.ts  NewNoteLocation.ts  NoteLink.ts  SearchSnippet.ts  ViewMode.ts
src-tauri/capabilities/: default.json
src-tauri/resources/default_plugins/mindzj/: data.json  main.js
src-tauri/src/: lib.rs
src-tauri/src/api/: ai_proxy.rs  mod.rs  plugin_api.rs  settings_api.rs  vault_api.rs
src-tauri/src/kernel/: error.rs  mod.rs  types.rs  watcher.rs
src-tauri/tests/: ai_proxy_tests.rs  type_export.rs
src/__tests__/: dep-pinning.test.ts  silent-catches.test.ts  vite-config.test.ts
src/components/ai/: AiBottomPanel.tsx  AiHistoryDialog.tsx
src/components/common/: CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  FilePreview.tsx  ImageViewer.tsx  StatusBar.tsx  TitleBar.tsx  WelcomeScreen.tsx
src/components/editor/: Editor.tsx  ReadingView.tsx  Toolbar.tsx
src/components/editor/extensions/: blockWidgets.ts  codeSyntaxHighlighting.ts  config.ts  imageWidgets.ts  listStyleExtension.ts  listUtils.ts  livePreview.ts  livePreviewTheme.ts
src/components/plugins/: PluginViewHost.tsx
src/components/screenshot/: ScreenshotOverlay.tsx
src/components/settings/: AboutPanel.tsx  AiSettingsPanel.tsx  CssSnippetsPanel.tsx  HotkeysPanel.tsx  PluginSettingsPanel.tsx  PluginsPanel.tsx  SettingsModal.tsx  SkinCard.tsx  SkinPickerPanel.tsx  styles.ts
src/components/settings/__tests__/: AboutLinkButton.test.tsx  AboutPanel.test.tsx  AiSettingsPanel.test.tsx  CssSnippetsPanel.test.tsx  HotkeysPanel.test.tsx  PluginSettingsPanel.test.tsx  PluginsPanel.test.tsx  SkinCard.test.tsx  SkinPickerPanel.test.tsx
src/components/sidebar/: Calendar.tsx  FileTree.tsx  Outline.tsx  SearchPanel.tsx  VaultSwitcher.tsx
src/components/sidebar/__tests__/: SearchPanel.cleanup.test.ts
src/components/tabs/: TabBar.tsx
src/components/workspace/: SplitWorkspaceView.tsx
src/constants/: apiEndpoints.ts  timeouts.ts  vaultPaths.ts  zIndex.ts
src/constants/__tests__/: apiEndpoints.test.ts  timeouts.test.ts  zIndex.test.ts
src/hooks/: keyboardUtils.test.ts  keyboardUtils.ts  useAiPanel.test.ts  useAiPanel.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  usePdfExport.test.ts  usePdfExport.ts  useScreenshot.test.ts  useScreenshot.ts
src/i18n/: index.ts
src/lib/: pickTabReplacement.test.ts  pickTabReplacement.ts
src/plugin-shim/: commands.ts  editorUtils.test.ts  editorUtils.ts  index.ts  plugin-data-dir.test.ts  plugin-data-dir.ts
src/plugin-shim/__tests__/: commands.test.ts  shim-cleanup.test.ts
src/stores/: ai.ts  aiService.ts  editor.test.ts  editor.ts  plugins.test.ts  plugins.ts  settings.test.ts  settings.ts  settingsNormalize.ts  vault.test.ts  vault.ts  workspace.test.ts  workspace.ts  workspaceStore.test.ts  workspaceStore.ts
src/stores/__tests__/: plugins.cleanup.test.ts
src/stores/ai/: anthropic.test.ts  anthropic.ts  gemini.test.ts  gemini.ts  normalize.test.ts  openai.test.ts  openai.ts  router.test.ts  router.ts  types.ts
src/stores/ai/tools/: definitions.ts  handlers.ts  index.ts  mindmap.ts
src/stores/ai/tools/__tests__/: definitions.test.ts  handlers.test.ts
src/styles/: editor.css  variables.css
src/test-utils/: index.ts  invoke-mock.ts  store-mocks.ts
src/types/: app.ts  events.ts  global.ts  index.ts
src/types/__tests__/: global.test.ts
src/utils/: aiHistory.ts  audio.ts  clamp.ts  clipboard.ts  errorHandler.ts  fileTypes.ts  imageInteraction.ts  linkUpdater.test.ts  markdownRenderer.ts  noteAttachment.ts  paneUtils.test.ts  paneUtils.ts  pdfExport.ts  platform.ts  vaultPaths.test.ts  vaultPaths.ts
src/utils/__tests__/: clamp.test.ts  clipboard.test.ts  errorHandler.test.ts
