[package]
name = "mindzj-cli"
version = "0.1.7"
description = "MindZJ CLI - command-line interface for MindZJ note vaults"
authors = ["SuperJohn"] 
license = "AGPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "mindzj"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.6.1", features = ["derive", "color"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
anyhow = "=1.0.102"
chrono = "=0.4.44"
sha2 = "=0.10.9"
hex = "=0.4.3"
rand = "=0.8.6"
dirs = "=6.0.0"
colored = "=2.2.0"
