[package]
name = "mindzj-kernel"
version = "0.1.7"
description = "MindZJ kernel — shared vault, search, link, and plugin logic"
authors = ["SuperJohn"]
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
tracing = "=0.1.44"
tantivy = "=0.22.1"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
notify = "=7.0.0"
uuid = { version = "=1.23.1", features = ["v4"] }
chrono = { version = "=0.4.44", features = ["serde"] }
sha2 = "=0.10.9"
hex = "=0.4.3"
rand = "=0.8.6"
dirs = "=6.0.0"
ts-rs = { version = "7", features = ["serde-compat", "chrono-impl"] }

[dev-dependencies]
tempfile = "=3.27.0"
